Shutdown OTP instance running in background